@@ -1,5 +1,6 @@
 DATE       AUTHOR       CHANGE
 ---------- ------------ -------------------------------------------------------
+2003-11-10 allenb       Added builder for package config scripts.
 2003-11-10 allenb       Removed global Prefix() method replacing it with 
                         storing the prefix in the autodist package instead.
 2003-10-?? allenb       Added support for Pyste
